Update documentation for isis table.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -46,6 +46,7 @@ interface Vlan42
    ip helper-address 10.10.64.150 source-interface Loopback0
    ip helper-address 10.10.96.150 source-interface Loopback0
    ip helper-address 10.10.96.151 source-interface Loopback0
+   isis enable EVPN_UNDERLAY
    isis authentication mode sha key-id 5 level-1
    isis authentication mode sha key-id 5 level-2
    ip address virtual 10.10.42.1/24
@@ -102,6 +103,7 @@ interface Vlan81
 interface Vlan83
    description SVI Description
    no shutdown
+   isis enable EVPN_UNDERLAY
    isis authentication mode md5
    isis authentication key 0 password
    ip address virtual 10.10.83.1/24
@@ -113,6 +115,7 @@ interface Vlan84
    arp gratuitous accept
    arp monitor mac-address
    ip address 10.10.84.1/24
+   isis enable EVPN_UNDERLAY
    isis authentication mode sha key-id 2 rx-disabled
    isis authentication key 0 password
    ip virtual-router address 10.10.84.254
@@ -122,6 +125,7 @@ interface Vlan85
    description SVI Description
    arp cache dynamic capacity 50000
    ip address 10.10.84.1/24
+   isis enable EVPN_UNDERLAY
    isis authentication mode sha key-id 2
    isis authentication key 0 password
    bfd interval 500 min-rx 500 multiplier 5
@@ -130,6 +134,7 @@ interface Vlan85
 interface Vlan86
    description SVI Description
    ip address 10.10.83.1/24
+   isis enable EVPN_UNDERLAY
    isis authentication mode shared-secret profile profile1 algorithm sha-1 rx-disabled
    ip attached-host route export 10
 !
@@ -139,11 +144,13 @@ interface Vlan87
    ip address 10.10.87.1/24
    ip access-group ACL_IN in
    ip access-group ACL_OUT out
+   isis enable EVPN_UNDERLAY
    isis authentication mode shared-secret profile profile1 algorithm sha-1
 !
 interface Vlan88
    description SVI Description
    shutdown
+   isis enable EVPN_UNDERLAY
    isis authentication mode md5 rx-disabled level-1
    isis authentication mode md5 rx-disabled level-2
    isis authentication key 0 password level-1
@@ -174,6 +181,7 @@ interface Vlan89
 interface Vlan90
    description SVI Description
    ip address 10.10.83.1/24
+   isis enable EVPN_UNDERLAY
    isis authentication mode shared-secret profile profile1 algorithm sha-256 level-1
    isis authentication mode shared-secret profile profile1 algorithm sha-256 level-2
    ip attached-host route export
@@ -181,6 +189,7 @@ interface Vlan90
 interface Vlan91
    description PBR Description
    shutdown
+   isis enable EVPN_UNDERLAY
    isis authentication mode md5 level-1
    isis authentication mode md5 level-2
    isis authentication key 0 password level-1
@@ -192,6 +201,7 @@ interface Vlan92
    ip proxy-arp
    ip directed-broadcast
    ip address 10.10.92.1/24
+   isis enable EVPN_UNDERLAY
    isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-1
    isis authentication mode shared-secret profile profile1 algorithm sha-256 rx-disabled level-2
 !
@@ -336,6 +346,7 @@ interface Vlan4094
    pim ipv4 hello count 3.5
    pim ipv4 dr-priority 200
    pim ipv4 bfd
+   isis enable EVPN_UNDERLAY
    isis authentication mode sha key-id 5 rx-disabled level-1
    isis authentication mode sha key-id 5 rx-disabled level-2
 !
