--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-interfaces-point-to-point-services-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-interfaces-point-to-point-services-2.yml
@@ -29,8 +29,13 @@ tenants:
     point_to_point_services:
       - name: TEN_A_site2_site5_eline_port_based
         endpoints:
-          - id: 26
+          - id: 27
             nodes: [ "duplicate-interfaces-point-to-point-services-2" ]
+            interfaces: [ "Ethernet6" ]
+            port_channel:
+              mode: 'active'
+          - id: 26
+            nodes: [ "duplicate-interfaces-point-to-point-services-1" ]
             interfaces: [ "Ethernet6" ]
             port_channel:
               mode: 'active'
@@ -41,6 +46,11 @@ tenants:
         endpoints:
           - id: 57
             nodes: [ "duplicate-interfaces-point-to-point-services-2" ]
+            interfaces: [ "Ethernet6" ]
+            port_channel:
+              mode: 'on'
+          - id: 58
+            nodes: [ "duplicate-interfaces-point-to-point-services-3" ]
             interfaces: [ "Ethernet6" ]
             port_channel:
               mode: 'on'
