--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
@@ -40,10 +40,11 @@ ptp:
 # port-channels
 port_channel_interfaces:
   - name: Port-Channel5
-    type: switched
     description: DC1_L2LEAF1_Po1
-    vlans: 110,201
-    mode: trunk
+    switchport:
+      trunk:
+        allowed_vlan: 110,201
+      mode: trunk
     mlag: 5
     ptp:
       enable: true
@@ -65,7 +66,6 @@ ethernet_interfaces:
     peer_interface: Ethernet5
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE2_Ethernet5
-    type: switched
     switchport:
       mode: trunk
       trunk:
