--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/qos.yml
@@ -300,7 +300,6 @@ ethernet_interfaces:
       dscp: 48
 
   - name: Ethernet6
-    type: switched
     peer: SRV-POD02
     peer_interface: Eth1
     peer_type: server
@@ -340,7 +339,6 @@ ethernet_interfaces:
       mode: active
 
   - name: Ethernet7
-    type: switched
     peer: SRV-POD03
     peer_interface: Eth1
     peer_type: server
@@ -359,13 +357,14 @@ ethernet_interfaces:
 ### Port-Channel Interfaces ###
 port_channel_interfaces:
   - name: Port-Channel3
-    type: switched
     description: MLAG_PEER_DC1-LEAF1B_Po3
-    vlans: "2-4094"
-    mode: trunk
-    trunk_groups:
-      - LEAF_PEER_L3
-      - MLAG
+    switchport:
+      trunk:
+        allowed_vlan: "2-4094"
+        groups:
+          - LEAF_PEER_L3
+          - MLAG
+      mode: trunk
     service_profile: experiment
     service_policy:
       qos:
