fix after rebase

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -31,7 +31,6 @@ ip security
       pfs dh-group 17
    !
    sa policy SA-4
-<<<<<<< HEAD
       esp integrity md5
       esp encryption 3des
    !
@@ -40,8 +39,8 @@ ip security
    !
    sa policy SA-6
       esp integrity sha384
-=======
->>>>>>> 4f209178e6 (Fix(eos_cli_config_gen): Sort IPsec SA, IKE policies and profiles)
+   !
+   sa policy SA-7
    !
    profile Profile-1
       ike-policy IKE-1
