Fix(eos_cli_config_gen): Sort IPsec SA, IKE policies and profiles (#4227)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -40,6 +40,8 @@ ip security
    sa policy SA-6
       esp integrity sha384
    !
+   sa policy SA-7
+   !
    profile Profile-1
       ike-policy IKE-1
       sa-policy SA-1
@@ -60,6 +62,8 @@ ip security
       shared-key 7 1231231231321AA
       flow parallelization encapsulation udp
       mode tunnel
+   !
+   profile Profile-4
    !
    key controller
       profile Profile-1
