--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/snmp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/snmp.cfg
@@ -37,6 +37,7 @@ snmp-server host 10.6.75.100 vrf MGMT version 3 priv USER-READ-AUTH-PRIV
 snmp-server enable traps
 no snmp-server vrf default
 snmp-server vrf MGMT
+snmp-server ifmib ifspeed shape-rate
 !
 interface Management1
    description oob_management
