--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-path-selection.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-path-selection.cfg
@@ -39,6 +39,11 @@ router path-selection
       !
       local interface Ethernet4.666
       !
+      local interface Port-Channel1 public address 192.168.42.43
+         stun server-profile STUN-P-1 STUN-P-2
+      !
+      local interface Port-Channel4.666
+      !
       local ip 192.168.1.100 public address 192.168.42.42
          stun server-profile STUN-P-1 STUN-P-2
       !
