--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -11,6 +11,7 @@ event-handler CONFIG_VERSIONING
 !
 event-handler trigger-on-boot
    action increment device-health metric Metric1
+   action increment device-health metric Metric1
    trigger on-boot
    action bash
       if [ 15 -gt 10 ]
@@ -20,6 +21,7 @@ event-handler trigger-on-boot
       EOF
 !
 event-handler trigger-on-counters
+   action log
    action log
    trigger on-counters
       poll interval 10
@@ -40,6 +42,7 @@ event-handler trigger-on-intf
 event-handler trigger-on-intf2
 !
 event-handler trigger-on-logging
+   action increment device-health metric Metric2
    action increment device-health metric Metric2
    trigger on-logging
       poll interval 10
